restructured main layout to fix overflow issue, fixed body scroll issue, resolved flow errors

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-  overflow: auto;
 }
 
 code {
